--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,12 @@
     <string name="text_forgot_password">Forgot password</string>
     <string name="process_death_state">process_death_state</string>
     <string name="invalid_login_credentials">Invalid login</string>
+    <string name="touch_to_change_image">Touch to change image</string>
+    <string name="write_a_blog_title">Write a blog title...</string>
+    <string name="write_some_content">Write some content...</string>
+    <string name="log_out">Log out</string>
+    <string name="field_username">username</string>
+    <string name="check">check</string>
+    <string name="no_more_results">No more results...</string>
 
 </resources>
